# hs-fs-filter

./: CHANGELOG.md  Dockerfile  Dockerfile.wasi.txt  README.md  build-img.sh  example.sh  hs-fs-filter.cabal  opt.sh
app/: Main.hs
src/: FsFilter.hs
test/: Spec.hs
