cabal-version:      3.14
name:               hs-fs-filter
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Werror -Werror

library
    import:           warnings
    exposed-modules:  FsFilter
    build-depends:
        base >= 4.17 && < 4.23,
        directory >= 1.3 && < 1.4
    hs-source-dirs:   src
    default-language: GHC2021

executable hs-fs-filter
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.17 && < 4.23,
        hs-fs-filter
    hs-source-dirs:   app
    default-language: GHC2021

test-suite hs-fs-filter-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        base >= 4.17 && < 4.23,
        hs-fs-filter,
        temporary >= 1.2 && < 1.3,
        directory >= 1.3 && < 1.4,
        filepath >= 1.4 && < 1.5,
        unix >= 2.7 && < 2.9
    default-language: GHC2021
